<resources>
    <string name="app_name">WordMaster</string>
    <string name="title_word">Word</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="string_word">Word</string>
    <string name="string_meaning">Meaning</string>
    <string name="hint_word_search">Input search string</string>
    <string name="string_enstmt">English Statement</string>
    <string name="string_kortran">Korean Translation</string>
    <string name="add_word">Add Word</string>
    <string name="edit_word">Edit Word</string>
    <string name="add_usage_layout">Add Usage Layout</string>
    <string name="add_usage">Add Usage</string>
    <string name="label_usage">Usages (Click + to add usage)</string>
    <string name="string_wordid">ID</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleted_usage">Usage Deleted</string>
    <string name="deleted_word">Word Deleted</string>
    <string name="title_add_word">Add Word</string>
    <string name="title_word_detail">Word Detail</string>
    <string name="title_edit_word">Edit Word</string>
    <string name="title_edit_usage">Edit Usage</string>
    <string name="title_add_usage">Add Usage</string>
    <string name="edit_usage">Edit Usage</string>
    <string name="empty_word">Word or Meaning is empty</string>
    <string name="empty_usage">English Statement or Korean Translation is empty</string>
    <string name="title_home">Home</string>
</resources>
