<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.philm2k.wordmaster.view.word.WordViewModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/title_add_word"
                android:textColor="@android:color/white"/>
            <EditText
                android:id="@+id/edit_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/string_word"
                android:text="@={viewmodel.txtWord}"/>
            <EditText
                android:id="@+id/edit_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_word"
                android:hint="@string/string_meaning"
                android:text="@={viewmodel.txtMeaning}"/>
            <Button
                android:id="@+id/btn_add_word"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/edit_meaning"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/add_word"
                android:textSize="13sp"
                android:onClick="@{() -> viewmodel.insert(viewmodel.txtWord.toString(), viewmodel.txtMeaning.toString())}"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
