<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_word">

    <fragment
        android:id="@+id/navigation_word"
        android:name="com.philm2k.wordmaster.view.word.WordFragment"
        android:label="@string/title_word"
        tools:layout="@layout/fragment_word" >
        <action
            android:id="@+id/action_navigation_word_to_navigation_add_word"
            app:destination="@id/navigation_add_word" />
        <action
            android:id="@+id/action_navigation_word_to_navigation_edit_word"
            app:destination="@id/navigation_edit_word" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_word"
        android:name="com.philm2k.wordmaster.view.word.AddWordFragment"
        android:label="@string/title_word"
        tools:layout="@layout/fragment_add_word" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.philm2k.wordmaster.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.philm2k.wordmaster.view.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_edit_word"
        android:name="com.philm2k.wordmaster.view.word.EditWordFragment"
        android:label="fragment_edit_word"
        tools:layout="@layout/fragment_edit_word" />
</navigation>