<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="usage"
            type="com.philm2k.wordmaster.model.entity.Usage" />
    </data>
    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_engstmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/string_enstmt"
                android:text="@{usage.english_statement}"/>
            <EditText
                android:id="@+id/edit_korTran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_below="@+id/edit_engstmt"
                android:hint="@string/string_kortran"
                android:text="@{usage.korean_translation}"/>

            <Button
                android:id="@+id/btn_add_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_korTran"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/add_usage"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
