<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="word"
            type="com.philm2k.wordmaster.model.entity.Word" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.word.AddWordFragment">
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txt_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/string_word"
                    android:text="@{word.word}"
                    android:inputType="text" />
                <EditText
                    android:id="@+id/txt_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_word"
                    android:hint="@string/string_meaning"
                    android:text="@{word.meaning}"
                    android:inputType="textImeMultiLine" />
                <Button
                    android:id="@+id/btn_add_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_meaning"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/add_word"
                    android:layout_marginEnd="0dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>