<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="word"
            type="com.philm2k.wordmaster.model.entity.Word" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.word.EditWordFragment">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/string_word"
                    android:text="@={word.word}"
                    android:inputType="text" />
                <EditText
                    android:id="@+id/edit_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_word"
                    android:hint="@string/string_meaning"
                    android:text="@={word.meaning}"
                    android:inputType="textImeMultiLine" />
                <Button
                    android:id="@+id/btn_edit_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_meaning"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/edit_word"
                    android:layout_marginEnd="0dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_useage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:listitem="@layout/usage_item"/>
    </LinearLayout>
</layout>