<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="word"
            type="com.philm2k.wordmaster.model.entity.Word" />
        <variable
            name="usage"
            type="com.philm2k.wordmaster.model.entity.Usage" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.word.DetailWordFragment">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/string_word"
                    android:text="@{word.word}"/>
                <TextView
                    android:id="@+id/txt_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_below="@+id/txt_word"
                    android:hint="@string/string_meaning"
                    android:text="@{word.meaning}"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/usage_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
            android:text="@string/label_usage"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_usage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usage_label"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/usage_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
